# rust_httpie_xh

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  kv.rs  main.rs  request.rs  response.rs
